chore: add custom command panel, remote management panel & server config panel

--- a/resources.qrc
+++ b/resources.qrc
@@ -2,4 +2,8 @@
     <qresource prefix="/config">
         <file>default-config.json</file>
     </qresource>
+    <qresource prefix="/">
+        <file>images/icon/focus/circlebutton_add 2.svg</file>
+        <file>images/icon/hover/circlebutton_add _hover.svg</file>
+    </qresource>
 </RCC>
