--- a/resources.qrc
+++ b/resources.qrc
@@ -7,5 +7,6 @@
         <file>images/icon/hover/circlebutton_add _hover.svg</file>
         <file>images/icon/hover/server.svg</file>
         <file>images/icon/focus/server.svg</file>
+        <file>images/logo/deepin-terminal.svg</file>
     </qresource>
 </RCC>
