--- a/resources.qrc
+++ b/resources.qrc
@@ -14,5 +14,9 @@
         <file>images/icon/focus/edit_press.svg</file>
         <file>images/icon/hover/edit_hover.svg</file>
         <file>images/icon/hover/exit_hover.svg</file>
+        <file>images/icon/hover/arrow_left.png</file>
+        <file>images/icon/hover/arrow_right.png</file>
+        <file>images/icon/focus/arrow_left@2x.png</file>
+        <file>images/icon/focus/arrow_right@2x.png</file>
     </qresource>
 </RCC>
