--- a/resources.qrc
+++ b/resources.qrc
@@ -12,6 +12,7 @@
         <file>images/icon/focus/edit_press.svg</file>
         <file>images/icon/hover/edit_hover.svg</file>
         <file>images/icon/hover/exit_hover.svg</file>
+        <file>images/icon/hover/exit_hover_dark.svg</file>
         <file>images/buildin/dark/command.svg</file>
         <file>images/buildin/dark/edit.svg</file>
         <file>images/buildin/light/command.svg</file>
