--- a/resources.qrc
+++ b/resources.qrc
@@ -13,6 +13,8 @@
         <file>images/icon/hover/edit_hover.svg</file>
         <file>images/icon/hover/exit_hover.svg</file>
         <file>images/icon/hover/exit_hover_dark.svg</file>
+        <file>images/icon/hover/Opacity0.png</file>
+        <file>images/icon/hover/Opacity1.png</file>
         <file>images/buildin/dark/command.svg</file>
         <file>images/buildin/dark/edit.svg</file>
         <file>images/buildin/light/command.svg</file>
