--- a/resources.qrc
+++ b/resources.qrc
@@ -11,8 +11,10 @@
         <file>resources/images/icon/hover/edit_hover.svg</file>
         <file>resources/images/icon/hover/exit_hover.svg</file>
         <file>resources/images/icon/hover/exit_hover_dark.svg</file>
-        <file>resources/images/icon/hover/opacity0.png</file>
-        <file>resources/images/icon/hover/opacity1.png</file>
+        <file>resources/images/icon/hover/opacity0.svg</file>
+        <file>resources/images/icon/hover/opacity1.svg</file>
+        <file>resources/images/icon/hover/opacity0_dark.svg</file>
+        <file>resources/images/icon/hover/opacity1_dark.svg</file>
         <file>resources/images/buildin/dark/edit.svg</file>
         <file>resources/images/buildin/dark/command.svg</file>
         <file>resources/images/buildin/light/edit.svg</file>
