--- a/src/assets/resources.qrc
+++ b/src/assets/resources.qrc
@@ -17,5 +17,6 @@
         <file>icons/deepin/builtin/light/icons/dt_opacity_right_20px.svg</file>
         <file>icons/deepin/builtin/dark/icons/dt_opacity_left_20px.svg</file>
         <file>icons/deepin/builtin/dark/icons/dt_opacity_right_20px.svg</file>
+        <file>icons/deepin/builtin/warning.svg</file>
     </qresource>
 </RCC>
