--- a/src/assets/resources.qrc
+++ b/src/assets/resources.qrc
@@ -18,5 +18,7 @@
         <file>icons/deepin/builtin/dark/icons/dt_opacity_left_20px.svg</file>
         <file>icons/deepin/builtin/dark/icons/dt_opacity_right_20px.svg</file>
         <file>icons/deepin/builtin/warning.svg</file>
+        <file>logo/headbar-dark.svg</file>
+        <file>logo/headbar-light.svg</file>
     </qresource>
 </RCC>
