feat: [tablet] 平板模式裁切雷神模式和相关快捷键
1. 平板模式裁切终端雷神模式，并裁切命令行参数中与雷神模式相关参数
2. 适配平板模式快捷键，移除F11（切换全屏）快捷键、横向分屏和纵向分屏快捷键（以及对应的右键菜单

Log: 平板模式裁切雷神模式和相关快捷键
Change-Id: Iaa0eee22d0776bac9518e368dc4d56e10b3514fa

--- a/src/assets/resources.qrc
+++ b/src/assets/resources.qrc
@@ -20,5 +20,6 @@
         <file>icons/deepin/builtin/warning.svg</file>
         <file>logo/headbar-dark.svg</file>
         <file>logo/headbar-light.svg</file>
+        <file>other/default-config-tablet.json</file>
     </qresource>
 </RCC>
