fix(终端UI): UI优化bug修复
Description: 无自定义命令，与无服务器提示添加

Log: bug:https://pms.uniontech.com/bug-view-113811.html

--- a/src/assets/resources.qrc
+++ b/src/assets/resources.qrc
@@ -2,6 +2,8 @@
     <qresource prefix="/">
         <file>other/default-config.json</file>
         <file>other/ssh_login.sh</file>
+        <file>other/server_group.svg</file>
+        <file>other/command.svg</file>
         <file>logo/deepin-terminal.svg</file>
         <file>icons/deepin/builtin/light/icons/dt_server_44px.svg</file>
         <file>icons/deepin/builtin/light/icons/dt_server_group_44px.svg</file>
